# koschei-messages

./: .gitignore  .pre-commit-config.yaml  REUSE.toml  pyproject.toml  tox.ini
.github/workflows/: main.yaml
.reuse/: dep5
koschei_messages/: collection.py  package.py
tests/: __init__.py  test_base.py  test_collection.py  test_package.py
