# SPDX-FileCopyrightText: 2023 Contributors to the Fedora Project
#
# SPDX-License-Identifier: GPL-2.0-or-later

[project]
name = "koschei-messages"
version = "1.0.1"
description = "A schema package for messages sent by Koschei"
license = "GPLv2-or-later"
readme = "README.md"
requires-python = ">=3.9,<4.0"
authors = [{name = "Fedora Infrastructure Team", email = "infrastructure@lists.fedoraproject.org"}]
keywords = ["fedora-messaging"]
dynamic = ["classifiers"]
dependencies = [
    "fedora-messaging (>=3.3.0,<4.0.0)",
]

[project.urls]
homepage = "https://github.com/fedora-infra/koschei-messages"
repository = "https://github.com/fedora-infra/koschei-messages"

[project.entry-points."fedora.messages"]
"koschei.package.state.change" = "koschei_messages.package:PackageStateChange"
"koschei.collection.state.change" = "koschei_messages.collection:CollectionStateChange"

[tool.poetry]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.group.dev.dependencies]
poetry = "^1.2.0-beta.2 || ^2.0.0"
black = ">=22.6.0"
pytest = "^7.1.2 || ^8.0.0"
pytest-cov = ">=3.0.0"
ruff = ">=0.0.253"
reuse = "^1.1.2 || ^2.0.0 || ^3.0.0 || ^4.0.0 || ^5.0.0 || ^6.0.0"
coverage = {extras = ["toml"], version = "^7.2.7"}

[tool.black]
line-length = 100

[tool.lint.ruff]
select = ["E", "F", "W", "I", "UP", "S", "B", "RUF"]
line-length = 100
# ignore = ["RUF010", "UP038"]
allowed-confusables = ["’"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"koschei_messages/__init__.py" = ["F401"]

[tool.coverage.run]
branch = true
source = [
    "koschei_messages",
]

[tool.coverage.report]
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
omit = [
    "tests/*",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
